ligolang/src/test/contracts/negative/modules_export_type.jsligo
namespace Bar {
    type foo = int
}

type a = Bar.foo